--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p id="horizon">Globe geometric horizon distance (aka earth curve): 0.6 miles.</p>
     <p id="distance">Distance to farthest visible surface feature: 13.8 miles.</p>
     <p id="beyond">That's 22x beyond a claimed globe geometric limitation.</p>
-    <img src="media/im.png" alt="Illustration showing Earth's curvature" width="200">
+    <img src="https://kingbelisariusix.neocities.org/media/image.png" alt="Illustration showing Earth's curvature" width="200">
     <br>
     <img src="https://media.giphy.com/media/h80jYD4ZGH6VAj6cO8/giphy.gif" alt="Animation depicting observer view" width="200">
     <br>
